--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  },
   "dependencies": {
-    "@prisma/client": "^5.4.2",
     "@tawk.to/tawk-messenger-react": "^2.0.1",
     "@types/node": "18.11.9",
     "@types/react-dom": "18.0.9",
@@ -70,7 +66,6 @@
     "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.10",
     "@types/uuid": "^9.0.2",
-    "next-transpile-modules": "^10.0.0",
-    "prisma": "^5.4.2"
+    "next-transpile-modules": "^10.0.0"
   }
 }
